modules/networking/attachments/vm-ingress-routes/service-web-vm.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-vm-svc
  namespace: ingress-demo
spec:
  selector:
    app: web-vm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
