modules/networking/attachments/vm-ingress-routes/route-web-vm.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-vm-route
  namespace: ingress-demo
spec:
  to:
    kind: Service
    name: web-vm-svc
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
